@@ -27,6 +27,7 @@ public:
   bool DoWork();
 
   virtual bool OnMessage(CGUIMessage& message);
+  virtual void OnWindowLoaded();
   virtual void Render();
   void ResetTimer();
 
